--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Relative Aneh</string>
+    <string-array name="arr_kemungkinan">
+        <item>Benar</item>
+        <item>Mungkin Benar</item>
+        <item>Salah</item>
+    </string-array>
 </resources>
